// SPDX-License-Identifier: MIT

syntax = "proto2";

import "fown.proto";

message ext_file_entry {
	required uint32		id	= 1;
	required fown_entry	fown	= 5;
}
