// SPDX-License-Identifier: MIT

syntax = "proto2";

message fifo_entry {
	required uint32		id		= 1;
	required uint32		pipe_id		= 2;
	optional uint32		regf_id		= 3;
}
