message utsns_entry {
	required string nodename = 1;
	required string domainname = 2;
}
